--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,8 @@
 		"outDir": "./dist",
 		"module": "nodenext",
 		"target": "esnext",
-		"lib": [
-			"esnext"
-		],
-		"types": [
-			"node"
-		],
+		"lib": ["esnext"],
+		"types": ["node"],
 		// "sourceMap": true,
 		// "declaration": true,
 		// "declarationMap": true,
