--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "commonjs",
   "dependencies": {
     "js-yaml": "^4.1.0",
+    "sass": "^1.93.3",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
